<resources>
    <string name="app_name">MySource</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_enter_number">Enter number from 1 to 12</string>

    <string name="title_description_chart_view_item">Chart view displayed in item of list view</string>

    <!-- market detail screen -->
    <string name="text_1day">1D</string>
    <string name="text_3month">3M</string>
    <string name="text_2month">2M</string>
    <string name="text_1month">1M</string>
    <string name="text_last_updated">Last updated: %1$s</string>

    <!-- Float action sample -->
    <string-array name="text_float_action">
        <item>Saving Online</item>
        <item>Pay Bill</item>
        <item>Bank Transfer</item>
        <item>Pay Dept</item>
        <item>QR Code</item>
    </string-array>

    <!-- Material design example -->
    <string name="account_expire_date">Maturity date: </string>
    <string name="account_available">Available funds</string>
    <string name="account_segment_local_account">Local accounts</string>
    <string name="account_segment_global_account">Global accounts</string>
    <string name="account_group_title_format">%1$s (%2$d)</string>
    <string name="account_text_location">LOCATION</string>
    <string name="hint_search">Search</string>
    <string name="dialog_title_select_location">Select Location</string>

    <!-- Bar chart, custom calendar -->
    <string name="bar_chart_label_income">Income</string>
    <string name="bar_chart_label_spent">Spent</string>
    <string name="bar_chart_label_income_uppercase">INCOME</string>
    <string name="bar_chart_label_spent_uppercase">SPENT</string>
    <string name="bar_chart_row_title_format">%1$d%2$s</string>
    <string name="chart_text_1_week">1W</string>
    <string name="chart_text_1_month">1M</string>
    <string name="vnd">VND</string>
    <string name="account_detail_filter_date_hint">Select date</string>
    <string name="account_detail_label_sender">Sender</string>
    <string name="account_detail_label_value_date">Value date</string>
    <string name="account_detail_label_balance">Balance</string>
    <string name="account_detail_format_deposit_date">Deposit date: %s</string>
    <string name="account_detail_format_latest_transaction_date">Latest transaction date: %s</string>
    <string name="account_detail_total_balance_label">Total balance</string>
    <string name="account_detail_opening_day_balance_label">Opening day balance</string>
    <string name="account_detail_compound_income_label">Compound income</string>
    <string name="account_detail_interest_label">Interest</string>
    <string name="account_detail_principle_label">Principle</string>
    <string name="account_detail_principle_payment_label">Principle payment</string>
    <string name="account_detail_active_status">Active</string>
    <string name="label_available">Available</string>
    <string name="label_balance">Balance</string>
    <string name="label_interest_rate">Interest rate</string>
    <string name="symbol_percent">%</string>
    <string name="label_compound_interest">Compound interest</string>
    <string name="account_detail_popup_value_format">Balance: %1$s %2$s</string>
    <string name="account_detail_text_view_more">View more</string>
    <string name="account_detail_text_view_less">View less</string>
    <string name="account_detail_text_segment_all_tab">All</string>
    <string name="account_detail_text_segment_income_tab">Income</string>
    <string name="account_detail_text_segment_expense_tab">Expense</string>
    <string name="account_detail_label_transaction_history">Transaction History</string>
    <string name="account_detail_text_filter">Filter</string>
    <string name="text_from">From</string>
    <string name="text_to">To</string>
    <string name="empty_string">empty</string>
    <string name="btnCancel">Cancel</string>
    <string name="button_reset_text">Reset</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="dialog_timesquare_from_date">From Date</string>
    <string name="dialog_timesquare_to_date">To Date</string>

</resources>
