<?xml version="1.0" encoding="utf-8"?>

<!-- The main content view -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/transparent"
              android:minWidth="200dp"
              android:orientation="vertical"
              android:padding="@dimen/margin_left_right">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_white_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/border_grey_background"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/image_button_selector"
                android:text="@string/button_reset_text"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/margin_left_right"
                android:paddingRight="@dimen/margin_left_right"
                android:paddingTop="@dimen/margin_left_right"
                android:text="@string/label_phone_number"
                android:textColor="@color/colorBlack"
                android:textSize="17sp"/>

            <Button
                android:id="@+id/bt_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/image_button_selector"
                android:text="@string/btnCancel"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                />
        </LinearLayout>

        <com.marcohc.robotocalendar.RobotoCalendarView
            android:id="@+id/robotoCalendarPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@drawable/border_white_background"/>

    </LinearLayout>
</LinearLayout>