<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_selector"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAccountNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@color/blue_light"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_expire_date"
                android:textColor="@color/colorLittleGrey"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvExpireDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:textColor="@color/colorLittleGrey"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_available"
                android:textColor="@color/colorLittleGrey"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvAvailableFund"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tvCurrencyCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSemiBlack"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        style="@style/horizontalDiv" />
</LinearLayout>